[package]
name = "flowsnet"
version = "0.1.0"
edition = "2021"
description = "Client tool for flows.network"
repository = "https://github.com/flows-network/flowsnet-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atty = "0.2"
clap = { version = "4", features = ["derive"] }
lazy_static = "1.4.0"
rathole = "0.4.5"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing-subscriber = "0.2"
