[package]
name = "flowsnet-cli"
version = "0.2.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Client tool for flows.network"
repository = "https://github.com/flows-network/flowsnet-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
atty = "0.2"
axum = { version = "0.6", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4"
rathole = "0.4.5"
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
rustls = "0.21.7"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24.1"
toml = "0.5"
tracing-subscriber = "0.2"
webpki-roots = "0.25.2"
wasmedge-sdk = { git = "https://github.com/WasmEdge/wasmedge-rust-sdk.git", branch = "main", features = ["async"] }
once_cell = "1.19.0"
slab = "0.4.9"
path-absolutize = "3.1.1"
libc = "0.2.151"
